Did some Changes

--- a/index.html
+++ b/index.html
@@ -199,8 +199,10 @@
                 >
               </li>
               <li>
-                <a href="#skills" class="header_nav_links has_active--effect"
-                  >Skills</a
+                <a
+                  href="#testimonials"
+                  class="header_nav_links has_active--effect"
+                  >Reviews</a
                 >
               </li>
             </ul>
@@ -591,6 +593,87 @@
           </div>
         </div>
       </section>
+      <section id="testimonials" class="site_content-container">
+        <div class="site_title--container">
+          <h2 class="site_section--title">Client Reviews</h2>
+        </div>
+        <div class="testimonials-grid">
+          <div class="testimonial-card">
+            <p class="testimonial-text">
+              "Adnan transformed our online presence. The new site is faster,
+              looks amazing, and our leads have doubled."
+            </p>
+            <div class="testimonial-author">
+              <span class="author-name">Sarah Jenkins</span>
+              <span class="author-role">CEO, TechStart</span>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <p class="testimonial-text">
+              "The GSAP animations are smooth and professional. Highly
+              recommended for anyone needing top-tier frontend work."
+            </p>
+            <div class="testimonial-author">
+              <span class="author-name">Michael Chen</span>
+              <span class="author-role">Product Manager</span>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <p class="testimonial-text">
+              "Professional, responsive, and delivered on time. The best
+              freelance developer we've worked with."
+            </p>
+            <div class="testimonial-author">
+              <span class="author-name">David Miller</span>
+              <span class="author-role">Founder, Creative Agency</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="process" class="site_content-container">
+        <div class="site_title--container">
+          <h2 class="site_section--title">How It Works</h2>
+          <p class="site_section--decs has_splitting--effect">
+            A simple, transparent process to take your project from concept to
+            launch.
+          </p>
+        </div>
+        <div class="process-timeline">
+          <div class="process-step">
+            <span class="step-number">01</span>
+            <h3>Discovery</h3>
+            <p>
+              We discuss your goals, target audience, and requirements to build
+              a solid strategy.
+            </p>
+          </div>
+          <div class="process-step">
+            <span class="step-number">02</span>
+            <h3>Design</h3>
+            <p>
+              I create wireframes and high-fidelity mockups for your approval.
+            </p>
+          </div>
+          <div class="process-step">
+            <span class="step-number">03</span>
+            <h3>Development</h3>
+            <p>
+              I build your site using clean code and modern technologies (React,
+              GSAP).
+            </p>
+          </div>
+          <div class="process-step">
+            <span class="step-number">04</span>
+            <h3>Launch</h3>
+            <p>
+              Testing, optimization, and finally—your site goes live to the
+              world.
+            </p>
+          </div>
+        </div>
+      </section>
+
       <section id="skills" class="site_content-container">
         <div class="skills_title--area site_title--container">
           <h2 class="skills_title site_section--title">Skills Set</h2>
@@ -784,86 +867,6 @@
           </div>
         </div>
       </section>
-      <section id="process" class="site_content-container">
-        <div class="site_title--container">
-          <h2 class="site_section--title">How It Works</h2>
-          <p class="site_section--decs has_splitting--effect">
-            A simple, transparent process to take your project from concept to
-            launch.
-          </p>
-        </div>
-        <div class="process-timeline">
-          <div class="process-step">
-            <span class="step-number">01</span>
-            <h3>Discovery</h3>
-            <p>
-              We discuss your goals, target audience, and requirements to build
-              a solid strategy.
-            </p>
-          </div>
-          <div class="process-step">
-            <span class="step-number">02</span>
-            <h3>Design</h3>
-            <p>
-              I create wireframes and high-fidelity mockups for your approval.
-            </p>
-          </div>
-          <div class="process-step">
-            <span class="step-number">03</span>
-            <h3>Development</h3>
-            <p>
-              I build your site using clean code and modern technologies (React,
-              GSAP).
-            </p>
-          </div>
-          <div class="process-step">
-            <span class="step-number">04</span>
-            <h3>Launch</h3>
-            <p>
-              Testing, optimization, and finally—your site goes live to the
-              world.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section id="testimonials" class="site_content-container">
-        <div class="site_title--container">
-          <h2 class="site_section--title">Client Reviews</h2>
-        </div>
-        <div class="testimonials-grid">
-          <div class="testimonial-card">
-            <p class="testimonial-text">
-              "Adnan transformed our online presence. The new site is faster,
-              looks amazing, and our leads have doubled."
-            </p>
-            <div class="testimonial-author">
-              <span class="author-name">Sarah Jenkins</span>
-              <span class="author-role">CEO, TechStart</span>
-            </div>
-          </div>
-          <div class="testimonial-card">
-            <p class="testimonial-text">
-              "The GSAP animations are smooth and professional. Highly
-              recommended for anyone needing top-tier frontend work."
-            </p>
-            <div class="testimonial-author">
-              <span class="author-name">Michael Chen</span>
-              <span class="author-role">Product Manager</span>
-            </div>
-          </div>
-          <div class="testimonial-card">
-            <p class="testimonial-text">
-              "Professional, responsive, and delivered on time. The best
-              freelance developer we've worked with."
-            </p>
-            <div class="testimonial-author">
-              <span class="author-name">David Miller</span>
-              <span class="author-role">Founder, Creative Agency</span>
-            </div>
-          </div>
-        </div>
-      </section>
 
       <section id="faq" class="site_content-container">
         <div class="site_title--container">
@@ -947,7 +950,7 @@
               <a href="#projects" class="has_active--effect">Projects</a>
             </li>
             <li class="site_footer-nav--links menu-section">
-              <a href="#skills" class="has_active--effect">Skills Set</a>
+              <a href="#testimonials" class="has_active--effect">Reviews</a>
             </li>
           </ul>
           <ul class="site_footer-nav">
