Made Some SEO Changes

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     </title>
     <meta
       name="title"
-      content="Adnan Mansuri | Expert Freelance Web Developer & UI/UX Designer India"
+      content="Adnan Mansuri | Expert Web Developer & UI/UX Designer - React, Next.js, GSAP"
     />
     <meta
       name="description"
-      content="Adnan Mansuri is a top-rated Freelance Web Developer & UI/UX Designer in Ahmedabad, India. Specializing in custom React websites, GSAP animations, SEO-optimized code, and high-performance digital solutions for global clients."
+      content="Adnan Mansuri is a top-rated Freelance Web Developer in India. Expert in React, Next.js, GSAP animations, and SEO. Hire me for high-performance, conversion-focused websites."
     />
     <meta
       name="keywords"
-      content="Adnan Mansuri, Freelance Web Developer India, UI/UX Designer Ahmedabad, Front-end Developer, React Developer, GSAP Animation Expert, Custom Website Development, Responsive Web Design, SEO Expert India, Freelance Graphic Designer, Hire Web Developer, JavaScript Developer, Next.js Developer, Creative Portfolio, Ahmedabad Web Design, Gujarat Freelancers, Web Performance Optimization, Interactive Websites, Locomotive Scroll, Lenis Scroll, Shopify Developer, WordPress Customization, Mobile App UI Design, Landing Page Design, Corporate Website Development, Startup MVP Builder"
+      content="Adnan Mansuri, Web Developer India, Freelance React Developer, Next.js Expert, GSAP Animation Specialist, UI/UX Designer Ahmedabad, Frontend Developer, Custom Website Development, SEO Expert, High Performance Websites, Hire Web Developer, Creative Portfolio, Ahmedabad Web Design, Interactive Websites, Locomotive Scroll, Mobile App Design, Corporate Website, Startup MVP, Responsive Web Design, JavaScript Developer"
     />
     <meta name="author" content="Adnan Mansuri" />
     <meta name="robots" content="index, follow" />
@@ -82,8 +82,7 @@
           "url": "https://adnanmansuri.pages.dev",
           "sameAs": [
             "https://www.linkedin.com/in/mansuri-adnan/",
-            "https://github.com/mansurivilla",
-            "https://twitter.com/adnanmansuri"
+            "https://github.com/mansurivilla"
           ],
           "image": "https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103",
           "description": "Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer specializing in creating responsive websites, user-centric designs, and striking graphics.",
@@ -146,6 +145,44 @@
             "closes": "21:00"
           },
           "priceRange": "$$"
+        },
+        {
+          "@context": "https://schema.org",
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "What is your typical timeline?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Most standard websites take 2-4 weeks. Complex web apps may take 4-8 weeks depending on requirements."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Do you provide SEO services?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes! Innovative on-page SEO best practices are built into every website I create to ensure you rank well."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Will I be able to update the site myself?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Absolutely. I can build with a CMS (like WordPress or headless CMS) so you can easily manage content."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Do you build custom web applications?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, I specialize in building custom web applications using React, Next.js, and other modern technologies."
+              }
+            }
+          ]
         }
       ]
     </script>
@@ -273,25 +310,49 @@
     <main class="site_content site_page-container">
       <section id="Home" class="site_top--area">
         <div class="site_top--area_inner">
-          <h1>Adnan Mansuri</h1>
-          <p class="has_splitting--effect">
-            Freelance Web Developer & UI/UX Designer. I build high-performance
-            websites that drive growth and convert visitors into customers.
+          <h1 class="hero-title">
+            <span class="has__heighlight--clr">Web Developer</span>
+            <br />
+            & UI/UX Designer
+          </h1>
+          <p class="has_splitting--effect hero-subtitle">
+            Crafting high-performance, <strong>SEO-optimized</strong> websites
+            that combine stunning design with flawless code to drive business
+            growth.
           </p>
-          <div class="site_cta--outline has_magnatic--effect">
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSdDxT5zvEJ6fZz190C7NdVbUw3ofFP-3ilEChHTOVkka3h8TQ/viewform?usp=publish-editor"
-              target="_blank"
-              class="site_cta--outline__a"
-            >
-              <span>Start Your Project</span>
-              <span
-                ><img
-                  class="theme_icon"
-                  src="./assets/images/link_arro.webp"
-                  alt="right icon"
-              /></span>
-            </a>
+          <div class="hero-cta-group">
+            <div class="site_cta--outline has_magnatic--effect">
+              <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSdDxT5zvEJ6fZz190C7NdVbUw3ofFP-3ilEChHTOVkka3h8TQ/viewform?usp=publish-editor"
+                target="_blank"
+                class="site_cta--outline__a"
+              >
+                <span>Scale Your Vision</span>
+                <span
+                  ><img
+                    class="theme_icon"
+                    src="./assets/images/link_arro.webp"
+                    alt="right icon"
+                /></span>
+              </a>
+            </div>
+            <div class="site_cta--minimal has_magnatic--effect">
+              <a href="#projects" class="site_cta--minimal__a">
+                Selected Works
+              </a>
+            </div>
+          </div>
+
+          <div class="hero-trust-bar">
+            <div class="trust-item">
+              <span class="trust-value">10+</span>
+              <span class="trust-label">Projects</span>
+            </div>
+            <div class="trust-sep">/</div>
+            <div class="trust-item">
+              <span class="trust-value">5+</span>
+              <span class="trust-label">Years</span>
+            </div>
           </div>
         </div>
 
@@ -868,6 +929,39 @@
         </div>
       </section>
 
+      <section id="why-me" class="site_content-container">
+        <div class="site_title--container">
+          <h2 class="site_section--title">Why Choose Me?</h2>
+          <p class="site_section--decs has_splitting--effect">
+            Delivering not just code, but business results through strategic
+            design and performance.
+          </p>
+        </div>
+        <div class="values-grid">
+          <div class="value-card">
+            <h3>Performance First</h3>
+            <p>
+              I build 100% SEO-optimized, lightning-fast websites that Google
+              loves and users enjoy.
+            </p>
+          </div>
+          <div class="value-card">
+            <h3>Conversion Focused</h3>
+            <p>
+              Design that guides visitors to take action, effectively turning
+              traffic into qualified leads.
+            </p>
+          </div>
+          <div class="value-card">
+            <h3>Scalable Code</h3>
+            <p>
+              Clean, maintainable React/Next.js code that grows with your
+              business without technical debt.
+            </p>
+          </div>
+        </div>
+      </section>
+
       <section id="faq" class="site_content-container">
         <div class="site_title--container">
           <h2 class="site_section--title">FAQ</h2>
@@ -899,6 +993,18 @@
               <p>
                 Absolutely. I can build with a CMS (like WordPress or headless
                 CMS) so you can easily manage content.
+              </p>
+            </div>
+          </div>
+          <div class="faq-item">
+            <button class="faq-question">
+              Do you build custom web applications?
+            </button>
+            <div class="faq-answer">
+              <p>
+                Yes, I specialize in building custom web applications using
+                React, Next.js, and other modern frameworks tailored to your
+                specific business needs.
               </p>
             </div>
           </div>
