Developed/Redesigned Some Sections

--- a/index.html
+++ b/index.html
@@ -692,45 +692,222 @@
         </div>
       </section>
 
-      <section id="process" class="site_content-container">
-        <div class="site_title--container">
-          <h2 class="site_section--title">How It Works</h2>
-          <p class="site_section--decs has_splitting--effect">
-            A simple, transparent process to take your project from concept to
-            launch.
-          </p>
-        </div>
-        <div class="process-timeline">
-          <div class="process-step">
-            <span class="step-number">01</span>
-            <h3>Discovery</h3>
-            <p>
-              We discuss your goals, target audience, and requirements to build
-              a solid strategy.
-            </p>
+      <section id="process" class="process_section">
+        <div class="site_content-container">
+          <div class="process_header">
+            <div class="process_header--left">
+              <span class="process_tag">Our Process</span>
+              <h2 class="process_title">
+                A strategic path to your <br />digital success.
+              </h2>
+            </div>
+            <div class="process_header--right">
+              <p class="process_desc">
+                We follow a disciplined workflow to ensure every project is
+                delivered with precision, speed, and absolute quality.
+              </p>
+              <div class="site_cta--minimal has_magnatic--effect">
+                <a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdDxT5zvEJ6fZz190C7NdVbUw3ofFP-3ilEChHTOVkka3h8TQ/viewform?usp=publish-editor"
+                  target="_blank"
+                  class="book_call_btn"
+                >
+                  <span>Start Your Journey</span>
+                  <svg
+                    width="20"
+                    height="20"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                    <polyline points="12 5 19 12 12 19"></polyline>
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
-          <div class="process-step">
-            <span class="step-number">02</span>
-            <h3>Design</h3>
-            <p>
-              I create wireframes and high-fidelity mockups for your approval.
-            </p>
+
+          <div class="process_grid">
+            <div class="process_card">
+              <div class="card_header">
+                <span class="card_step">→ Step 01</span>
+                <span class="card_number">01 /////</span>
+              </div>
+              <div class="card_icon">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <circle cx="11" cy="11" r="8"></circle>
+                  <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                </svg>
+              </div>
+              <h3 class="card_title">Discovery</h3>
+              <p class="card_text">
+                Deep research into your business goals, target audience, and
+                competition to build a solid foundation.
+              </p>
+            </div>
+
+            <div class="process_card">
+              <div class="card_header">
+                <span class="card_step">→ Step 02</span>
+                <span class="card_number">02 /////</span>
+              </div>
+              <div class="card_icon">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <circle cx="12" cy="12" r="10"></circle>
+                  <circle cx="12" cy="12" r="6"></circle>
+                  <circle cx="12" cy="12" r="2"></circle>
+                </svg>
+              </div>
+              <h3 class="card_title">Strategy</h3>
+              <p class="card_text">
+                Defining the technical roadmap and user flow to ensure every
+                detail aligns with your strategic vision.
+              </p>
+            </div>
+
+            <div class="process_card">
+              <div class="card_header">
+                <span class="card_step">→ Step 03</span>
+                <span class="card_number">03 /////</span>
+              </div>
+              <div class="card_icon">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M12 19l7-7 3 3-7 7-3-3z"></path>
+                  <path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"></path>
+                  <path d="M2 2l7.586 7.586"></path>
+                  <circle cx="11" cy="11" r="2"></circle>
+                </svg>
+              </div>
+              <h3 class="card_title">Design</h3>
+              <p class="card_text">
+                Crafting high-conversion, premium interfaces that resonate with
+                your brand and delight your users.
+              </p>
+            </div>
+
+            <div class="process_card">
+              <div class="card_header">
+                <span class="card_step">→ Step 04</span>
+                <span class="card_number">04 /////</span>
+              </div>
+              <div class="card_icon">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <polyline points="16 18 22 12 16 6"></polyline>
+                  <polyline points="8 6 2 12 8 18"></polyline>
+                </svg>
+              </div>
+              <h3 class="card_title">Execution</h3>
+              <p class="card_text">
+                Building robust, scalable solutions using modern tech stacks
+                like React, Next.js, and GSAP for fluid performance.
+              </p>
+            </div>
+
+            <div class="process_card">
+              <div class="card_header">
+                <span class="card_step">→ Step 05</span>
+                <span class="card_number">05 /////</span>
+              </div>
+              <div class="card_icon">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"
+                  ></path>
+                  <path
+                    d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"
+                  ></path>
+                  <path d="M9 12H4s.5-1 1-4c2 0 3 .5 4 1s.5 2 0 3z"></path>
+                  <path
+                    d="M15 15v5c-1 0-4-.5-4-1 0-2 .5-3 1-4s2-.5 3 0z"
+                  ></path>
+                </svg>
+              </div>
+              <h3 class="card_title">Launch</h3>
+              <p class="card_text">
+                Meticulous testing and optimization to ensure a flawless live
+                performance and long-term stability.
+              </p>
+            </div>
           </div>
-          <div class="process-step">
-            <span class="step-number">03</span>
-            <h3>Development</h3>
-            <p>
-              I build your site using clean code and modern technologies (React,
-              GSAP).
-            </p>
-          </div>
-          <div class="process-step">
-            <span class="step-number">04</span>
-            <h3>Launch</h3>
-            <p>
-              Testing, optimization, and finally—your site goes live to the
-              world.
-            </p>
+
+          <div class="process_footer">
+            <div class="footer_item">
+              <h4>Optimization & SEO</h4>
+              <p>
+                Ensuring your site ranks well and loads in the blink of an eye
+                to maximize reach.
+              </p>
+            </div>
+            <div class="footer_item">
+              <h4>Scalable Architecture</h4>
+              <p>
+                Clean code built to grow with your business, without
+                accumulating technical debt.
+              </p>
+            </div>
+            <div class="footer_item">
+              <h4>Interactive Experience</h4>
+              <p>
+                Deeply engaging GSAP animations that capture and hold user
+                attention effortlessly.
+              </p>
+            </div>
+            <div class="footer_item">
+              <h4>Quality Assurance</h4>
+              <p>
+                Rigorous testing across all devices and browsers to guarantee a
+                seamless journey.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -962,50 +1139,118 @@
         </div>
       </section>
 
-      <section id="faq" class="site_content-container">
-        <div class="site_title--container">
-          <h2 class="site_section--title">FAQ</h2>
-        </div>
-        <div class="faq-container">
-          <div class="faq-item">
-            <button class="faq-question">What is your typical timeline?</button>
-            <div class="faq-answer">
-              <p>
-                Most standard websites take 2-4 weeks. Complex web apps may take
-                4-8 weeks depending on requirements.
-              </p>
+      <section id="faq" class="faq_section">
+        <div class="faq_main--container">
+          <div class="site_content-container">
+            <div class="faq_left--area">
+              <h2 class="faq_title">Frequent Ask<br />Questions</h2>
             </div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question">Do you provide SEO services?</button>
-            <div class="faq-answer">
-              <p>
-                Yes! innovative on-page SEO best practices are built into every
-                website I create to ensure you rank well.
-              </p>
-            </div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question">
-              Will I be able to update the site myself?
-            </button>
-            <div class="faq-answer">
-              <p>
-                Absolutely. I can build with a CMS (like WordPress or headless
-                CMS) so you can easily manage content.
-              </p>
-            </div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question">
-              Do you build custom web applications?
-            </button>
-            <div class="faq-answer">
-              <p>
-                Yes, I specialize in building custom web applications using
-                React, Next.js, and other modern frameworks tailored to your
-                specific business needs.
-              </p>
+            <div class="faq_right--area">
+              <div class="faq-accordion">
+                <div class="faq-item active">
+                  <button class="faq-question active">
+                    <span>What is 3D floor plan rendering?</span>
+                    <svg
+                      class="chevron"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                  </button>
+                  <div class="faq-answer" style="height: auto">
+                    <p style="opacity: 1; transform: translateY(0)">
+                      A 3D floor plan rendering is a three-dimensional,
+                      bird's-eye-view visual representation of a building's
+                      layout that adds depth and realism. It's used in
+                      architecture and real estate to help visualize and plan
+                      interior spaces. These renderings provide a lifelike view
+                      of the area, featuring details like furnishings and
+                      lighting, making them invaluable for design and marketing
+                      purposes. They aid architects and interior designers in
+                      experimenting with different layouts, and in the real
+                      estate industry, they're used to showcase properties to
+                      potential buyers or renters.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="faq-item">
+                  <button class="faq-question">
+                    <span>Why do I need a 3D floor layout?</span>
+                    <svg
+                      class="chevron"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                  </button>
+                  <div class="faq-answer">
+                    <p>
+                      Most standard websites take 2-4 weeks. Complex web apps
+                      may take 4-8 weeks depending on requirements.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="faq-item">
+                  <button class="faq-question">
+                    <span
+                      >What is the process like in creating a 3D floor
+                      plan?</span
+                    >
+                    <svg
+                      class="chevron"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                  </button>
+                  <div class="faq-answer">
+                    <p>
+                      Yes! innovative on-page SEO best practices are built into
+                      every website I create to ensure you rank well.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="faq-item">
+                  <button class="faq-question">
+                    <span>How much does a 3D floor plan cost?</span>
+                    <svg
+                      class="chevron"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                  </button>
+                  <div class="faq-answer">
+                    <p>
+                      Absolutely. I can build with a CMS (like WordPress or
+                      headless CMS) so you can easily manage content.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
