--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </div>
 
     <header class="header">
-      <div class="header_inner test">
+      <div class="header_inner test test_2">
         <div class="header_content container">
           <nav class="header_navigations_links">
             <div class="header_brand_logo site_navigation--item">
